# ELEC330_Butterfly

./: README.md
BoM/: Bill of Materials.docx
Code/: adadaptation_ardupilot  butterflybot_sdf_thrusters  emptyenviroment_ardupilot  launch_ardupilot  readme
Code/autonav_flight_testing/: basic_drone_ardupilot_sdf  drone_controller_thrusters  thruster_launchfile
Code/butterflybot/src/: CMakeLists.txt  package.xml  setup.py
Code/butterflybot/src/butterflybot/: ReadMe_Package_File_Structure.txt  package.xml  plugin_description.xml  setup.py
Code/butterflybot/src/butterflybot/butterflybot/: joint_controller.py  map_save_panel.py  thruster_balance.py  transform_broadcaster.py
Code/butterflybot/src/butterflybot/config/: butterflybot_3d.lua
Code/butterflybot/src/butterflybot/launch/: cartographer.launch.py  display.launch  launch.py  object_detection.launch.py
Code/butterflybot/src/butterflybot/meshes/: 5X4.7 CL.STL  link_front_right.STL  link_rear_right.STL
Code/butterflybot/src/butterflybot/rviz/: butterflybot.rviz
Code/butterflybot/src/butterflybot/urdf/: butterflybot.sdf  butterflybot.sdf.bak  butterflybot.urdf  env_ws.sdf
Code/butterflybot/src/launch/: gazebo.launch  launch.py
Code/butterflybot/src/meshes/: base_link.STL  link_front_left.STL
Code/butterflybot/src/urdf/: Butterflybot.csv  butterflybot.sdf  butterflybot.urdf  env_ws.sdf
Logbook/: Assignment 3 Logbook - ELEC330 Team Butterfly (Group 5).docx
Multimedia/: readme.txt
Reports/Assignment 2/: ELEC330 Assignment 2 Report Team Butterfly.docx  (+1 more)
butterfly/: CMakeLists.txt  package.xml
(+80 files in other folders)
