<package format="3">
  <name>butterflybot</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for butterflybot.
    This package contains configuration data, 3D models, and launch files for butterflybot robot.
  </description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
